--- a/assets/style.css
+++ b/assets/style.css
@@ -1,140 +1,194 @@
-@import url('https://fonts.googleapis.com/css?family=Comfortaa&display=swap');
-body{
-    font-family: 'Comfortaa', cursive;
+@import url("https://fonts.googleapis.com/css?family=Comfortaa&display=swap");
+body {
+  font-family: "Comfortaa", cursive;
 }
 
-#myImage{
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
-    border: 2px solid rgb(123, 228, 123);
-    margin: 20px;
-    overflow: hidden;
-}
-#hi{
-    font-size: 50px;
-}
-#aboutMe{
-    width: 85%;
+::-webkit-scrollbar {
+  width: 6px;
 }
 
-
-.img{
-    width: 200px;
-    height: 200px;
-}
-.list{
-    width: 80%;
+::-webkit-scrollbar-thumb {
+  background-color: rgb(123, 228, 123);
+  border-radius: 4px;
 }
 
-.period{
-    color: gray;
+::-webkit-scrollbar-track {
+  background-color: whitesmoke;
+  border-radius: 4px;
+  padding-left: 0.3rem;
 }
 
-.job{
-    margin-left: 40px;
-    border: 0;
-    border-radius: 10px;
-    width: 85%;
+#myImage {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  border: 2px solid rgb(123, 228, 123);
+  margin: 20px;
+  overflow: hidden;
+}
+#hi {
+  font-size: 50px;
+}
+#aboutMe {
+  width: 85%;
 }
 
-.jCenter{
-    margin: 20px auto;
-    padding: 25px;
+.img {
+  width: 200px;
+  height: 200px;
+}
+.list {
+  width: 80%;
 }
 
-.list li{
-    margin: 25px;
+.period {
+  color: gray;
 }
 
-a{
-    text-decoration: none !important;
-}
-#extra{
-    background-color: #fefefefe;
-}
-
-.socials{
-    margin: 7px;
-}
-.more{
-    width: 100px !important;
-    height: 100px !important;
-    border-radius: 50% !important;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.job {
+  margin-left: 40px;
+  border: 0;
+  border-radius: 10px;
+  width: 85%;
 }
 
-.subtitles{
-    width: 30%;
-    text-align: center;
-    background-color: rgb(123, 228, 123);
+.jCenter {
+  margin: 20px auto;
+  padding: 25px;
 }
 
-.footer{
-    text-align: center;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    height: 45px;
-}
-.footer span{
-    font-size: 12px;
-    display: block;
-    position: absolute;
-    bottom: 10px;
-    position: absolute;
-    width: 90%;
-    left: 50%;
-    top: 45%;
-    bottom: auto;
-    right: auto;
-    transform: translateX(-50%) translateY(-50%);
-    text-align: center;
-}
-.footer a{
-    color: #000000;
-    text-decoration: none;
-}
-.fa{
-    color: #E90606;
-    margin: 0 3px;
-    font-size: 10px;
-    animation: pound .35s infinite alternate;
+.list li {
+  margin: 25px;
 }
 
-@keyframes pound{
-  to{transform: scale(1.1)}
+a {
+  text-decoration: none !important;
+}
+#extra {
+  background-color: #fefefefe;
 }
 
+.socials {
+  margin: 7px;
+}
+.more {
+  width: 100px !important;
+  height: 100px !important;
+  border-radius: 50% !important;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
+.subtitles {
+  width: 100%;
+  /* background-color: rgb(123, 228, 123); */
+}
 
-@media screen and (max-width: 720px){
-     .title{
+.footer {
+  text-align: center;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  height: 45px;
+}
+.footer span {
+  font-size: 12px;
+  display: block;
+  position: absolute;
+  bottom: 10px;
+  position: absolute;
+  width: 90%;
+  left: 50%;
+  top: 45%;
+  bottom: auto;
+  right: auto;
+  transform: translateX(-50%) translateY(-50%);
+  text-align: center;
+}
+.footer a {
+  color: #000000;
+  text-decoration: none;
+}
+.fa {
+  color: #e90606;
+  margin: 0 3px;
+  font-size: 10px;
+  animation: pound 0.35s infinite alternate;
+}
+
+.project-img {
+  width: 100%;
+  height: 25vh;
+  object-fit: cover;
+  object-position: center;
+}
+
+.project-card {
+  width: 85%;
+  height: 60vh;
+}
+.project-desc {
+  height: 80%;
+  overflow: auto;
+  padding-bottom: 0.5rem;
+}
+
+.project-desc p {
+  font-size: 14px;
+}
+
+.project-stack {
+  width: 70%;
+  margin-bottom: 0;
+  display: flex;
+  align-items: center;
+}
+
+.project-txt {
+  height: 35vh;
+}
+
+.project-view-btn {
+  width: 30%;
+}
+
+.project-footer {
+  padding-top: 0.2rem;
+  height: 20%;
+}
+
+@keyframes pound {
+  to {
+    transform: scale(1.1);
+  }
+}
+
+@media screen and (max-width: 720px) {
+  .title {
     font-size: 30px !important;
-} 
-p, li{
+  }
+  p,
+  li {
     font-size: 0.8em;
-}
+  }
 
-#myImage{
+  #myImage {
     width: 150px;
     height: 150px;
+  }
 
-}
-
-.img{
+  .img {
     width: 150px;
     height: 143px;
-}
-#hi{
+  }
+  #hi {
     font-size: 30px;
-}
+  }
 
-.more{
+  .more {
     margin-top: 10px;
     width: 80px !important;
     height: 80px !important;
-    font-size: 12px !important;    
-}
+    font-size: 12px !important;
+  }
 }
