--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Comfortaa&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;600&display=swap");
 
 * {
   box-sizing: border-box;
@@ -17,9 +18,10 @@ body {
   box-shadow: 0px 1px 3px gray;
   display: flex;
   align-items: center;
-  position: sticky;
+  position: sticky !important;
   top: 0;
   background-color: var(--bg);
+  padding: 0 5%;
 }
 
 .main {
@@ -29,5 +31,111 @@ body {
 
 .banner {
   height: 100vh;
-  min-height: 300px;
+  /* background: linear-gradient(to right, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+    url("./images/bannerBg2.jpeg"); */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.banner div {
+  position: absolute;
+}
+
+.banner h2,
+.banner p {
+  margin: 0;
+  color: white;
+  display: inline;
+  font-family: "IBM Plex Mono", monospace;
+}
+
+.banner h2 {
+  font-size: 60px;
+  padding-right: 5px;
+}
+
+.banner p {
+  font-size: 36px;
+}
+
+/* particle */
+canvas {
+  display: block;
+  vertical-align: bottom;
+} /* ---- particles.js container ---- */
+#particles-js {
+  width: 100%;
+  height: 100vh;
+  background-color: rgb(13, 13, 17);
+  background-image: url("");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 50% 50%;
+  overflow: hidden;
+} /* ---- stats.js ---- */
+
+.header nav {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  justify-content: space-between;
+  font-family: Comfortaa;
+}
+
+.header nav h5 {
+  font-size: 24px;
+}
+
+.nav-list {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  column-gap: 10px;
+  margin: 0;
+  padding: 0;
+  font-size: 14px;
+  color: gray;
+}
+
+.n-logo {
+  font-size: 30px;
+  font-family: "IBM Plex Mono", monospace;
+  text-shadow: -2px 1px rgb(160, 158, 158);
+}
+
+.about {
+  display: flex;
+  column-gap: 5%;
+  align-items: center;
+  justify-content: center;
+  width: 70%;
+  margin: 0 auto;
+}
+
+.n-logo-lg {
+  font-size: 100px;
+  font-weight: bold;
+  font-family: "IBM Plex Mono", monospace;
+  text-shadow: -4px 2px rgb(160, 158, 158);
+}
+
+.footer {
+  text-align: center;
+  padding: 5px;
+}
+
+.logo-container {
+  width: 120px;
+  height: 120px;
+  background-color: whitesmoke;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.about-text {
+  /* width: 60%; */
 }
