--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Comfortaa&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;600&family=Poppins:wght@400;600;700&display=swap");
 
 * {
   box-sizing: border-box;
@@ -8,6 +8,9 @@
 :root {
   --nav-height: 65px;
   --bg: white;
+  --bar-height: 28px;
+  --black: black;
+  --white: white;
 }
 body {
   padding: 0;
@@ -26,13 +29,12 @@ body {
 
 .main {
   min-height: calc(100vh - var(--nav-height));
-  padding: 3% 5%;
+  padding: 0 5%;
+  padding-bottom: 3%;
 }
 
 .banner {
   height: 100vh;
-  /* background: linear-gradient(to right, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
-    url("./images/bannerBg2.jpeg"); */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -86,17 +88,32 @@ canvas {
 
 .header nav h5 {
   font-size: 24px;
+  margin: 0;
 }
 
 .nav-list {
   list-style: none;
   display: flex;
   align-items: center;
-  column-gap: 10px;
   margin: 0;
   padding: 0;
   font-size: 14px;
   color: gray;
+  width: fit-content;
+}
+
+.nav-list li {
+  cursor: pointer !important;
+}
+
+.nav-list li a {
+  text-decoration: none;
+  font: inherit;
+  color: inherit;
+}
+
+.nav-list li:hover {
+  color: var(--black);
 }
 
 .n-logo {
@@ -124,6 +141,9 @@ canvas {
 .footer {
   text-align: center;
   padding: 5px;
+  font-size: 20px;
+  text-shadow: -2px 1px rgb(160, 158, 158);
+  background-color: rgba(243, 239, 239, 0.3);
 }
 
 .logo-container {
@@ -137,5 +157,63 @@ canvas {
 }
 
 .about-text {
-  /* width: 60%; */
+  font-family: "Poppins", sans-serif;
+}
+
+.nav-list li:nth-child(2) {
+  margin: 0 20px;
+}
+
+#about {
+  min-height: calc(100vh - var(--nav-height) - 40px);
+  padding-top: 60px;
+}
+
+.section-header {
+  font-family: "IBM Plex Mono", monospace;
+  margin: 0;
+  font-size: 26px;
+  margin-bottom: 40px;
+  text-align: center;
+}
+
+.about-skill {
+  width: 68%;
+  margin: 0 auto;
+  padding: 5% 0;
+}
+
+.skill-rating {
+  display: flex;
+  align-items: center;
+  height: var(--bar-height);
+  margin-bottom: 22px;
+}
+
+.progress {
+  width: 100%;
+  background-color: whitesmoke;
+  position: relative;
+}
+
+.progress span {
+  position: absolute;
+  right: 5px;
+  top: 5px;
+  font-family: "IBM Plex Mono", monospace;
+  color: gray;
+}
+
+.progress-bar {
+  background-color: var(--black);
+  height: var(--bar-height);
+}
+
+.skill-name {
+  margin: 0;
+  flex-basis: 20%;
+  font-family: "Poppins", sans-serif;
+  font-size: 20px;
+  border-bottom: 1px solid var(--black);
+  margin-top: -3px;
 }
