--- a/assets/style.css
+++ b/assets/style.css
@@ -12,9 +12,17 @@
   --black: black;
   --white: white;
 }
+html {
+  scroll-behavior: smooth;
+}
 body {
   padding: 0;
   margin: 0;
+  font-family: Poppins;
+}
+
+* {
+  font-family: Poppins;
 }
 .header {
   height: var(--nav-height);
@@ -25,6 +33,7 @@ body {
   top: 0;
   background-color: var(--bg);
   padding: 0 5%;
+  z-index: 10;
 }
 
 .main {
@@ -88,6 +97,7 @@ canvas {
 
 .header nav h5 {
   font-size: 24px;
+  font-family: Comfortaa;
   margin: 0;
 }
 
@@ -118,7 +128,7 @@ canvas {
 
 .n-logo {
   font-size: 30px;
-  font-family: "IBM Plex Mono", monospace;
+  font-family: "IBM Plex Mono", monospace !important;
   text-shadow: -2px 1px rgb(160, 158, 158);
 }
 
@@ -139,11 +149,27 @@ canvas {
 }
 
 .footer {
+  display: flex;
+  justify-content: space-between;
+  background-color: rgba(243, 239, 239, 0.3);
+  padding: 5px 2%;
+}
+
+.footer p {
   text-align: center;
-  padding: 5px;
   font-size: 20px;
   text-shadow: -2px 1px rgb(160, 158, 158);
-  background-color: rgba(243, 239, 239, 0.3);
+  margin: 0;
+}
+
+.footer div {
+  display: flex;
+  column-gap: 15px;
+  align-items: center;
+}
+
+.footer div a {
+  display: flex;
 }
 
 .logo-container {
@@ -165,8 +191,11 @@ canvas {
 }
 
 #about {
+}
+
+.section-wrap {
   min-height: calc(100vh - var(--nav-height) - 40px);
-  padding-top: 60px;
+  padding-top: 98px;
 }
 
 .section-header {
@@ -175,6 +204,7 @@ canvas {
   font-size: 26px;
   margin-bottom: 40px;
   text-align: center;
+  text-transform: uppercase;
 }
 
 .about-skill {
@@ -216,4 +246,101 @@ canvas {
   font-size: 20px;
   border-bottom: 1px solid var(--black);
   margin-top: -3px;
+}
+
+.project-grid {
+  display: grid;
+  grid-template-columns: repeat(3, minmax(auto, 300px));
+  column-gap: 20px;
+  row-gap: 20px;
+  justify-content: center;
+}
+
+.project {
+  width: 390px;
+  height: 350px;
+  background-color: var(--black);
+  box-shadow: 2px 4px 5px gray;
+  padding: 20px;
+  position: relative;
+  overflow: hidden;
+}
+
+.project section {
+  background-color: var(--black);
+  width: 100%;
+  position: absolute;
+  left: 0;
+  bottom: -70px;
+  height: 70px;
+  padding: 0 4%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-family: Comfortaa;
+  font-size: 14px;
+  transition: all 0.3s;
+}
+
+.project p {
+  color: var(--white);
+  margin: 0;
+}
+
+.project a {
+  border: 1px solid var(--white);
+  color: var(--white);
+  background-color: transparent;
+  text-decoration: none;
+  padding: 4px 6px;
+  font-family: "IBM Plex Mono", monospace;
+}
+
+.project:hover {
+  box-shadow: 4px 6px 5px gray;
+  filter: grayscale(0.6);
+}
+
+.project:hover section {
+  bottom: 0;
+}
+
+.contact-card {
+  box-shadow: 2px 4px 5px gray;
+  width: 70%;
+  min-height: 350px;
+  margin: 0 auto;
+  padding: 3% 5%;
+}
+
+.contact-form {
+  width: 60%;
+  margin: 0 auto;
+}
+
+.contact-form input {
+  display: block;
+  height: 38px;
+  width: 100%;
+  margin-bottom: 20px;
+  padding-left: 10px;
+}
+
+.contact-form textarea {
+  width: 100%;
+  padding: 2% 10px;
+}
+
+.contact-form button {
+  border: 2px solid var(--black);
+  background-color: transparent;
+  padding: 1% 3%;
+  font-family: "IBM Plex Mono", monospace;
+  margin-top: 10px;
+  transition: all 0.3s;
+}
+
+.contact-form button:hover {
+  transform: scale(1.1, 1.1);
+  transition: all 0.3s;
 }
