--- a/assets/style.css
+++ b/assets/style.css
@@ -344,3 +344,51 @@ canvas {
   transform: scale(1.1, 1.1);
   transition: all 0.3s;
 }
+
+@media (max-width: 768px) {
+  .project-grid {
+    display: grid;
+    grid-template-columns: repeat(2, minmax(auto, 300px));
+    column-gap: 20px;
+    row-gap: 20px;
+    justify-content: center;
+  }
+
+  .project {
+    width: 300px;
+    height: 260px;
+  }
+
+  .contact-card {
+    width: 100%;
+  }
+}
+
+@media (max-width: 660px) {
+  .project-grid {
+    grid-template-columns: repeat(1, minmax(auto, 300px));
+  }
+
+  .project {
+    width: 390px;
+    height: 350px;
+  }
+  .contact-form {
+    width: 80%;
+    margin: 0px auto;
+  }
+}
+
+@media (max-width: 500px) {
+  .project-grid {
+    grid-template-columns: 1fr;
+  }
+  .project {
+    width: 100%;
+    height: 350px;
+  }
+  .contact-form {
+    width: 90%;
+    margin: 0px auto;
+  }
+}
