--- a/assets/style.css
+++ b/assets/style.css
@@ -313,37 +313,44 @@ canvas {
   min-height: 350px;
   margin: 0 auto;
   padding: 3% 5%;
+  display: flex;
+  align-items: center;
+  background-color: var(--white);
 }
 
-.contact-form {
-  width: 60%;
-  margin: 0 auto;
+.contact-card div:first-child {
+  flex-basis: 60%;
 }
-
-.contact-form input {
-  display: block;
-  height: 38px;
+.contact-card div:last-child {
+  flex-basis: 40%;
+}
+.contact-card div > img {
   width: 100%;
-  margin-bottom: 20px;
-  padding-left: 10px;
+  height: 300px;
+  object-fit: contain;
 }
 
-.contact-form textarea {
-  width: 100%;
-  padding: 2% 10px;
+.contact-card h4 {
+  font-size: 24px;
+  font-family: Comfortaa;
+  margin: 0;
+  margin-bottom: 8px;
 }
 
-.contact-form button {
-  border: 2px solid var(--black);
-  background-color: transparent;
-  padding: 1% 3%;
+.contact-email {
   font-family: "IBM Plex Mono", monospace;
-  margin-top: 10px;
+  text-decoration: none;
+  color: gray;
+}
+
+.contact-socials {
+  display: flex;
+  column-gap: 25px;
   transition: all 0.3s;
 }
 
-.contact-form button:hover {
-  transform: scale(1.1, 1.1);
+.contact-socials a:hover {
+  transform: scale(1.2, 1.2);
   transition: all 0.3s;
 }
 
